fix nav on smaller screens

--- a/css/app.scss
+++ b/css/app.scss
@@ -15,7 +15,7 @@
   text-align: center;
 
   li.page {
-    width: 12%;
+    width: 10%;
   }
 
   a {
